--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+          <version>4.3.10.RELEASE</version>
+      </dependency>
   </dependencies>
 
   <build>
