--- a/product-consumer/src/main/resources/application.properties
+++ b/product-consumer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 
 spring.application.name=PRODUCT-CONSUMER
+feign.hystrix.enabled=true
 
 eureka.client.service-url.defaultZone=http://localhost:8260/eureka
