--- a/product-consumer/pom.xml
+++ b/product-consumer/pom.xml
@@ -36,6 +36,14 @@
             <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.danqing</groupId>
             <artifactId>parent</artifactId>
             <version>1.0-SNAPSHOT</version>
