--- a/product-consumer/src/main/resources/application.properties
+++ b/product-consumer/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-server.port=8080
-
-spring.application.name=PRODUCT-CONSUMER
+logging.level.org.springframework=INFO
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 feign.hystrix.enabled=true
-
 eureka.client.service-url.defaultZone=http://localhost:8260/eureka
