--- a/product-consumer/src/main/resources/bootstrap.properties
+++ b/product-consumer/src/main/resources/bootstrap.properties
@@ -1,3 +1,6 @@
 server.port=8088
 
 spring.application.name=PRODUCT-CONSUMER
+
+spring.cloud.config.profile=dev
+spring.cloud.config.uri= http://localhost:8280/
