--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8280
 
 spring.application.name=config-server
+eureka.client.service-url.defaultZone=http://localhost:8260/eureka
+
 spring.cloud.config.server.git.uri=git@github.com:danqing-wen/SpringcloudSamplesConfig.git
-security.user.name=danqing
-security.user.password=066905
+#security.user.name=danqing
+#security.user.password=066905
