--- a/product-consumer/src/main/resources/application.properties
+++ b/product-consumer/src/main/resources/application.properties
@@ -4,3 +4,10 @@ feign.hystrix.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8260/eureka
 spring.zipkin.base-url=http://localhost:8240
 spring.sleuth.sampler.percentage=1.0
+
+spring.cloud.stream.bindings.input.destination=spring-cloud-producttopic
+spring.cloud.stream.bindings.input.content-type=application/json
+spring.cloud.stream.bindings.input.group=mallWebGroup
+spring.cloud.stream.kafka.binder.brokers=localhost
+spring.cloud.stream.kafka.binder.defaultBrokerPort=9092
+spring.cloud.stream.kafka.binder.zkNodes=localhost
