--- a/product-consumer/src/main/resources/bootstrap.properties
+++ b/product-consumer/src/main/resources/bootstrap.properties
@@ -3,4 +3,12 @@ server.port=8088
 spring.application.name=PRODUCT-CONSUMER
 
 spring.cloud.config.profile=dev
-spring.cloud.config.uri= http://localhost:8280/
+#spring.cloud.config.uri= http://localhost:8280/
+
+
+eureka.client.service-url.defaultZone=http://localhost:8260/eureka
+
+spring.cloud.config.fail-fast=true
+
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=config-server
