--- a/product-server/src/main/resources/application.properties
+++ b/product-server/src/main/resources/application.properties
@@ -2,3 +2,9 @@
 spring.zipkin.base-url=http://localhost:8240
 spring.sleuth.sampler.percentage=1.0
 eureka.client.service-url.defaultZone=http://localhost:8260/eureka
+spring.cloud.stream.bindings.output.destination=spring-cloud-producttopic
+spring.cloud.stream.kafka.binder.brokers=localhost
+spring.cloud.stream.kafka.binder.defaultBrokerPort=9092
+spring.cloud.stream.kafka.binder.zkNodes=localhost
+spring.cloud.stream.bindings.output.content-type=application/json
+
