--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -42,6 +42,10 @@
           <artifactId>spring-web</artifactId>
           <version>4.3.10.RELEASE</version>
       </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bus-kafka</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
