--- a/product-server/pom.xml
+++ b/product-server/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>parent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-kafka</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
